--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 </head>
 <link rel="stylesheet" href="./assets/css/index.css">
 <body>
-    
+    <h1>заголовок 1</h1>
+    <h2>заголовок 2</h2>
+    <h3>заголовок 3</h3>
+    <h4>заголовок 4</h4>
+    <h5>заголовок 5</h5>
+    <h6>заголовок 6</h6>
+    <p>
+        человек-паук нет дома
+    </p>
+    <button class= "btn-demo">demo</button>
+    <button class= "btn-contact">contact</button>
 </body>
 </html>
