--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about</title>
-</head>
-<link rel="stylesheet" href="./assets/css/index.css">
-<body>
-    <h1>заголовок 1</h1>
-    <h2>заголовок 2</h2>
-    <h3>заголовок 3</h3>
-    <h4>заголовок 4</h4>
-    <h5>заголовок 5</h5>
-    <h6>заголовок 6</h6>
-    <p>
-        человек-паук нет дома
-    </p>
-    <button class= "btn-demo">demo</button>
-    <button class= "btn-contact">contact</button>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About</title>
+    <link rel="stylesheet" href="./assets/css/index.css" />
+     <script src="./assets/js/index.js"></script>
+  </head>
+  <body>
+    <header class="header">
+      <h1>Frontend Developer</h1>
+      <div class="header-navigation">
+        <nav class="header-nav">
+          <a href=""><h3>ABOUT</h3></a>
+          <a href=""><h3>SKILLS</h3></a>
+          <a href=""><h3>SERVICES</h3></a>
+          <a href=""><h3>PORTFOLIO</h3></a>
+        </nav>
+        <input id="lightmode" type="checkbox" />
+        <label class="lightmode-btn" for="lightmode">
+          <span></span>
+        </label>
+      </div>
+    </header>
+  </body>
 </html>
