--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
     <link rel="stylesheet" href="./assets/css/index.css" />
-     <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/index.js"></script>
   </head>
   <body>
     <header class="header">
@@ -24,5 +24,32 @@
         </label>
       </div>
     </header>
+    <main class="main">
+      <aside class="sidebar">
+        <img src="./assets/images/DropMeFiles_gtexE/photo.svg" alt="" />
+        <div>
+          <h3>snicks picky</h3>
+          <h4>frontend developer</h4>
+        </div>
+        <p>yguoyfittyf tftyft tyft yf</p>
+        <div class="sidbar_social-media">
+          <a href=""
+            ><img src="./assets/images/DropMeFiles_gtexE/github.svg" alt=""
+          /></a>
+          <a href=""
+            ><img src="./assets/images/DropMeFiles_gtexE/instagram.svg" alt=""
+          /></a>
+          <a href=""
+            ><img src="./assets/images/DropMeFiles_gtexE/telegram.svg" alt=""
+          /></a>
+          <a href=""
+            ><img src="./assets/images/DropMeFiles_gtexE/vk.svg" alt=""
+          /></a>
+        </div>
+      </aside>
+      <main class="about">
+        <h2>about</h2>
+      </main>
+    </main>
   </body>
 </html>
