--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
     <link rel="stylesheet" href="./assets/css/index.css" />
-    <script src="./assets/js/index.js"></script>
+    <script defer src="./assets/js/index.js"></script>
   </head>
   <body>
     <header class="header">
@@ -49,6 +49,12 @@
       </aside>
       <main class="about">
         <h2>about</h2>
+        <div class="card-list"></div>
+        <div class="card">
+          <h2>sdjnvefnvejnvej</h2>
+          <p>dfkjvndknjfnvkjn</p>
+          <p>dsgaethethwet</p>
+        </div>
       </main>
     </main>
   </body>
