--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <a href=""
             ><img src="./assets/images/DropMeFiles_gtexE/telegram.svg" alt=""
           /></a>
-          <a href=""
+          <a href="https://vk.com/id736264564"
             ><img src="./assets/images/DropMeFiles_gtexE/vk.svg" alt=""
           /></a>
         </div>
@@ -54,6 +54,7 @@
           <h2>sdjnvefnvejnvej</h2>
           <p>dfkjvndknjfnvkjn</p>
           <p>dsgaethethwet</p>
+        </div>
         </div>
       </main>
     </main>
